--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,8 @@
 # *.eps
 # *.pdf
 
-## Generated if empty string is given at "Please type another file name for output:"
-IEEE19-diffTrace.pdf
+## Generated if empty string is given at "Please type another file name for output
+paper-goat.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
